--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/truetech?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=truetech
+spring.datasource.password=Wale2024@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ### JPA / HIBERNATE ###
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+server.address=0.0.0.0
 server.port=8087
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
