--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ### DATABASE ###
 spring.datasource.url=jdbc:mysql://localhost:3306/truetech?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=truetech
-#spring.datasource.password=Wale2024@
+spring.datasource.username=truetech
+spring.datasource.password=Wale2024@
 ### JPA / HIBERNATE ###
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
